Avoid MemoryCache eviction of preloaded resources with devtools open

Currently, InspectorNetworkAgent::didCommitLoad is evicting all
resources from MemoryCache, including ones that were preloaded
using headers just before that, which results in double downloads
when devtools are open.

This CL fixes that, by making sure that this eviction spares unused
preloads.

BUG=652187

Review-Url: https://codereview.chromium.org/2385313002
Cr-Commit-Position: refs/heads/master@{#424907}

Former-commit-id: f78da02239eef5039ce480e8620d30a136918a74